--- a/package.json
+++ b/package.json
@@ -1,5 +1,31 @@
 {
-  "dependencies": {
-    "http-server": "^14.1.1"
-  }
+	"name": "javascript-data-structures-and-algorithms",
+	"version": "1.0.0",
+	"description": "Notes, challenge resolutions, and applications of the Grokking Algorithms book content with unit tests ",
+	"main": "index.ts",
+	"author": "Lucas Souza (@deverebor)",
+	"license": "MIT",
+	"private": false,
+	"scripts": {
+		"lint": "eslint . --fix"
+	},
+	"dependencies": {
+		"http-server": "^14.1.1"
+	},
+	"devDependencies": {
+		"@types/node": "^18.7.18",
+		"@typescript-eslint/eslint-plugin": "^5.37.0",
+		"@typescript-eslint/parser": "^5.37.0",
+		"eslint": "^8.23.1",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-config-standard-with-typescript": "^23.0.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-n": "^15.2.5",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-promise": "^6.0.1",
+		"prettier": "^2.7.1",
+		"ts-loader": "^9.3.1",
+		"ts-node": "^10.9.1",
+		"typescript": "^4.8.3"
+	}
 }
